--- a/indiv_project.ipynb
+++ b/indiv_project.ipynb
@@ -28,6 +28,12 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from scipy import sparse\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
     "import numpy as np"
    ]
   },
@@ -309,30 +315,6 @@
     "X = df.drop('subscribe', axis=1)\n",
     "y = df['subscribe']\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "subscribe\n",
-       "0    17729\n",
-       "1     2271\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The dataset is imbalanced \n",
-    "y.value_counts()"
    ]
   },
   {
@@ -1094,23 +1076,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "from sklearn.model_selection import cross_validate, train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -1119,7 +1084,7 @@
     "\n",
     "# Initialize models\n",
     "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
+    "    \"Logistic Regression\": LogisticRegression(random_state=42),\n",
     "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
     "    \"Random Forest\": RandomForestClassifier(random_state=42),\n",
     "    \"GBM\": GradientBoostingClassifier(random_state=42),\n",
@@ -1170,42 +1135,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define a pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_selection import SelectKBest, f_classif\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
-    "\n",
-    "\n",
-    "# Placeholder for the classifier\n",
-    "classifier_placeholder = 'classifier'\n",
-    "\n",
-    "# Define the pipeline\n",
-    "pipeline = ImbPipeline(steps=[\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('smote', SMOTE(random_state=42)),\n",
-    "    ('feature_selection', SelectKBest(f_classif)),\n",
-    "    (classifier_placeholder, RandomForestClassifier(random_state=42))  # Example with RandomForest\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1. Logistic Regression"
    ]
   },
@@ -1214,25 +1143,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Define the pipeline\n",
-    "pipeline_lr = ImbPipeline(steps=[\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('smote', SMOTE(random_state=42)),\n",
-    "    ('feature_selection', SelectKBest(f_classif)),\n",
-    "    ('classifier', LogisticRegression(random_state=42))\n",
-    "])\n",
-    "\n",
-    "# Parameter grid\n",
-    "param_grid_lr = {\n",
-    "    'feature_selection__k': [10, 20],\n",
-    "    'classifier__C': [0.01, 0.1, 1, 10]\n",
-    "}\n",
-    "\n",
-    "# Setup and run the grid search\n",
-    "grid_search_lr = GridSearchCV(pipeline_lr, param_grid=param_grid_lr, cv=StratifiedKFold(5),\n",
-    "                              scoring='roc_auc', n_jobs=-1, verbose=1)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1246,18 +1157,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Adjust the pipeline classifier and parameter grid for Decision Tree\n",
-    "pipeline_dt = pipeline_lr.set_params(classifier=DecisionTreeClassifier(random_state=42))\n",
-    "param_grid_dt = {\n",
-    "    'feature_selection__k': [10, 20],\n",
-    "    'classifier__max_depth': [None, 10, 20],\n",
-    "    'classifier__min_samples_split': [2, 5, 10]\n",
-    "}\n",
-    "\n",
-    "grid_search_dt = GridSearchCV(pipeline_dt, param_grid=param_grid_dt, cv=StratifiedKFold(5),\n",
-    "                              scoring='roc_auc', n_jobs=-1, verbose=1)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1271,17 +1171,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "param_grid = {\n",
-    "    'feature_selection__k': [10, 20],  # Number of features to select\n",
-    "    'classifier__n_estimators': [100, 200],  # Number of trees in RandomForest\n",
-    "    'classifier__max_depth': [None, 10],  # Max depth of trees\n",
-    "}\n",
-    "\n",
-    "# Setup GridSearchCV\n",
-    "grid_search = GridSearchCV(pipeline, param_grid=param_grid, cv=StratifiedKFold(5),\n",
-    "                           scoring='roc_auc', n_jobs=-1, verbose=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1295,19 +1185,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Adjust for GBM\n",
-    "pipeline_gbm = pipeline_lr.set_params(classifier=GradientBoostingClassifier(random_state=42))\n",
-    "param_grid_gbm = {\n",
-    "    'feature_selection__k': [10, 20],\n",
-    "    'classifier__n_estimators': [100, 200],\n",
-    "    'classifier__learning_rate': [0.01, 0.1, 0.2],\n",
-    "    'classifier__max_depth': [3, 5, 7]\n",
-    "}\n",
-    "\n",
-    "grid_search_gbm = GridSearchCV(pipeline_gbm, param_grid=param_grid_gbm, cv=StratifiedKFold(5),\n",
-    "                               scoring='roc_auc', n_jobs=-1, verbose=1)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1328,16 +1206,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Adjust for Gaussian Naive Bayes (note: Naive Bayes may not have many hyperparameters to tune)\n",
-    "pipeline_gnb = pipeline_lr.set_params(classifier=GaussianNB())\n",
-    "param_grid_gnb = {\n",
-    "    'feature_selection__k': [10, 20]\n",
-    "}\n",
-    "\n",
-    "grid_search_gnb = GridSearchCV(pipeline_gnb, param_grid=param_grid_gnb, cv=StratifiedKFold(5),\n",
-    "                               scoring='roc_auc', n_jobs=-1, verbose=1)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
