--- a/benchmark_code.ipynb
+++ b/benchmark_code.ipynb
@@ -19,21 +19,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_validate, train_test_split\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from scipy import sparse\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.metrics import make_scorer, precision_score, recall_score, f1_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +255,9 @@
        "[5 rows x 21 columns]"
       ]
      },
+     "execution_count": 36,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -256,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +342,9 @@
        "Name: count, dtype: int64"
       ]
      },
+     "execution_count": 39,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -335,26 +354,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select categorical and numerical features\n",
+    "\n",
     "categorical_cols = X.select_dtypes(include=['object', 'category']).columns\n",
     "numerical_cols = X.select_dtypes(exclude=['object', 'category']).columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
     "\n",
     "# Preprocessing for numerical data\n",
     "numerical_transformer = Pipeline(steps=[\n",
@@ -391,6 +407,212 @@
     "    \"Gaussian Naive Bayes\": GaussianNB()\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Define scoring metrics for cross-validation\n",
+    "scoring = {\n",
+    "    'accuracy': 'accuracy',\n",
+    "    'roc_auc': 'roc_auc',\n",
+    "    'precision': make_scorer(precision_score, zero_division=0),\n",
+    "    'recall': make_scorer(recall_score, zero_division=0),\n",
+    "    'f1': make_scorer(f1_score, zero_division=0)\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression:\n",
+      " - CV Accuracy: 0.9007\n",
+      " - CV AUC: 0.7840\n",
+      " - CV Precision: 0.6743\n",
+      " - CV Recall: 0.2460\n",
+      " - CV F1: 0.3597\n",
+      " - Validation Accuracy: 0.8960\n",
+      " - Validation AUC: 0.7846\n",
+      " - Validation Precision: 0.6105\n",
+      " - Validation Recall: 0.2313\n",
+      " - Validation F1: 0.3355\n",
+      "\n",
+      "\n",
+      "Decision Tree:\n",
+      " - CV Accuracy: 0.8344\n",
+      " - CV AUC: 0.6158\n",
+      " - CV Precision: 0.2969\n",
+      " - CV Recall: 0.3329\n",
+      " - CV F1: 0.3136\n",
+      " - Validation Accuracy: 0.8300\n",
+      " - Validation AUC: 0.6179\n",
+      " - Validation Precision: 0.2900\n",
+      " - Validation Recall: 0.3436\n",
+      " - Validation F1: 0.3145\n",
+      "\n",
+      "\n",
+      "Random Forest:\n",
+      " - CV Accuracy: 0.8962\n",
+      " - CV AUC: 0.7597\n",
+      " - CV Precision: 0.5963\n",
+      " - CV Recall: 0.2658\n",
+      " - CV F1: 0.3676\n",
+      " - Validation Accuracy: 0.8955\n",
+      " - Validation AUC: 0.7633\n",
+      " - Validation Precision: 0.5849\n",
+      " - Validation Recall: 0.2731\n",
+      " - Validation F1: 0.3724\n",
+      "\n",
+      "\n",
+      "GBM:\n",
+      " - CV Accuracy: 0.9016\n",
+      " - CV AUC: 0.7895\n",
+      " - CV Precision: 0.6773\n",
+      " - CV Recall: 0.2542\n",
+      " - CV F1: 0.3695\n",
+      " - Validation Accuracy: 0.8965\n",
+      " - Validation AUC: 0.7965\n",
+      " - Validation Precision: 0.6149\n",
+      " - Validation Recall: 0.2357\n",
+      " - Validation F1: 0.3408\n",
+      "\n",
+      "\n",
+      "Gaussian Naive Bayes:\n",
+      " - CV Accuracy: 0.7737\n",
+      " - CV AUC: 0.7625\n",
+      " - CV Precision: 0.2885\n",
+      " - CV Recall: 0.6301\n",
+      " - CV F1: 0.3929\n",
+      " - Validation Accuracy: 0.7883\n",
+      " - Validation AUC: 0.7620\n",
+      " - Validation Precision: 0.2907\n",
+      " - Validation Recall: 0.6013\n",
+      " - Validation F1: 0.3920\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Placeholder for results\n",
+    "results = {}\n",
+    "\n",
+    "# Define a function to safely get probabilistic predictions\n",
+    "def safe_predict_proba(model, X):\n",
+    "    if hasattr(model, \"predict_proba\"):\n",
+    "        return model.predict_proba(X)[:, 1]\n",
+    "    else:\n",
+    "        # For models without predict_proba, use decision_function if available\n",
+    "        # Note: You might need to adjust this depending on your models and goals\n",
+    "        if hasattr(model, \"decision_function\"):\n",
+    "            return model.decision_function(X)\n",
+    "        else:\n",
+    "            # Fallback or dummy values if neither is available\n",
+    "            return np.zeros(X.shape[0])\n",
+    "\n",
+    "# Updating and evaluating models within the loop\n",
+    "for name, model in models.items():\n",
+    "    # Correctly manage the 'model' step in the ImbPipeline\n",
+    "    model_pipeline.steps[-1] = ('model', model)  # Ensure this is the correct position for your model step\n",
+    "    \n",
+    "    # Perform cross-validation\n",
+    "    cv_results = cross_validate(model_pipeline, X_train, y_train, cv=5, scoring=scoring)\n",
+    "    \n",
+    "    # Fit the model on the full training data and evaluate on the validation set\n",
+    "    model_pipeline.fit(X_train, y_train)\n",
+    "    y_pred = model_pipeline.predict(X_val)\n",
+    "    y_proba = safe_predict_proba(model_pipeline, X_val)\n",
+    "\n",
+    "    # Store CV and validation metrics\n",
+    "    results[name] = {\n",
+    "        'CV Accuracy': np.mean(cv_results['test_accuracy']),\n",
+    "        'CV AUC': np.mean(cv_results['test_roc_auc']),\n",
+    "        'CV Precision': np.mean(cv_results['test_precision']),\n",
+    "        'CV Recall': np.mean(cv_results['test_recall']),\n",
+    "        'CV F1': np.mean(cv_results['test_f1']),\n",
+    "        'Validation Accuracy': accuracy_score(y_val, y_pred),\n",
+    "        'Validation AUC': roc_auc_score(y_val, y_proba) if y_proba is not None else 'N/A',\n",
+    "        'Validation Precision': precision_score(y_val, y_pred, zero_division=0),\n",
+    "        'Validation Recall': recall_score(y_val, y_pred, zero_division=0),\n",
+    "        'Validation F1': f1_score(y_val, y_pred, zero_division=0)\n",
+    "    }\n",
+    "\n",
+    "# Printing the results\n",
+    "for model, metrics in results.items():\n",
+    "    print(f\"{model}:\")\n",
+    "    for metric, value in metrics.items():\n",
+    "        print(f\" - {metric}: {value:.4f}\")\n",
+    "    print(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "# results = {}\n",
+    "\n",
+    "# for name, model in models.items():\n",
+    "#     # Update the pipeline with the current model\n",
+    "#     current_pipeline = Pipeline(model_pipeline.steps + [('model', model)])\n",
+    "    \n",
+    "#     # Perform cross-validation\n",
+    "#     cv_results = cross_validate(current_pipeline, X_train, y_train, cv=5, scoring=scoring)\n",
+    "    \n",
+    "#     # Fit the model on the full training data and evaluate on the validation set\n",
+    "#     current_pipeline.fit(X_train, y_train)\n",
+    "#     y_pred = current_pipeline.predict(X_val)\n",
+    "#     y_proba = current_pipeline.predict_proba(X_val)[:, 1] if hasattr(model, 'predict_proba') else None\n",
+    "\n",
+    "#     # Store CV and validation metrics\n",
+    "#     results[name] = {\n",
+    "#         'CV Accuracy': np.mean(cv_results['test_accuracy']),\n",
+    "#         'CV AUC': np.mean(cv_results['test_roc_auc']),\n",
+    "#         'CV Precision': np.mean(cv_results['test_precision']),\n",
+    "#         'CV Recall': np.mean(cv_results['test_recall']),\n",
+    "#         'CV F1': np.mean(cv_results['test_f1']),\n",
+    "#         'Validation Accuracy': accuracy_score(y_val, y_pred),\n",
+    "#         'Validation AUC': roc_auc_score(y_val, y_proba) if y_proba is not None else 'N/A',\n",
+    "#         'Validation Precision': precision_score(y_val, y_pred, zero_division=0),\n",
+    "#         'Validation Recall': recall_score(y_val, y_pred, zero_division=0),\n",
+    "#         'Validation F1': f1_score(y_val, y_pred, zero_division=0)\n",
+    "#     }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for model, metrics in results.items():\n",
+    "#     print(f\"{model}:\")\n",
+    "#     for metric, value in metrics.items():\n",
+    "#         print(f\" - {metric}: {value:.4f}\")\n",
+    "#     print(\"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -400,7 +622,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
